@@ -18,7 +18,7 @@ module Jekyll
     def read_yaml(base, name)
       self.content = File.read(File.join(base, name))
       
-      if self.content =~ /^(---\s*\n.*?\n?)(---.*?\n)/m
+      if self.content =~ /^(---\s*\n.*?\n?)^(---\s*$\n?)/m
         self.content = self.content[($1.size + $2.size)..-1]
       
         self.data = YAML.load($1)
