@@ -1,0 +1,5 @@
+---
+title: Foo --- Bar
+---
+
+Triple the fun!
