@@ -1,6 +1,7 @@
 ==
   * Bug Fixes
     * Require redcloth >= 4.2.1 in tests (#92)
+    * Don't break on triple dashes in yaml frontmatter (#93)
   * Minor Enhancements
     * Allow .mkd as markdown extension
 
